<resources>
    <string name="app_name">ShoppingHelper</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="notif">Notify contacts</string>
    <string name="shopping_list">Shopping list</string>
    <string name="find_stores">Find stores</string>
    <string name="edititemdialog_title">Edit item</string>
    <string name="additemdialog_title">New item</string>
    <string name="search_selected_stores">Look for selected stores</string>
    <string name="search_all_stores">Look for all stores</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="shopping_helper">Shopping Helper</string>
    <string name="abouttext">Created by Gergely Szakallas</string>
    <string name="delete">Delete</string>
    <string name="store">Store</string>
    <string name="title_activity_shopsettings">Store settings</string>
    <string name="done">Save</string>
    <string name="title_activity_contactsettings">Contact settings</string>
    <string name="contact">Name</string>
    <string name="phonenumber">Phone number</string>
    <string name="notify_contacts_start">I\'m going shopping</string>
    <string name="notify_contacts_end">I\'m done shopping</string>
    <string name="message_start">I\'m going to the store, if you want anything, add it to the shopping list.</string>
    <string name="message_end">I was at the store and I didn\'t get %1$s</string>
    <string name="close">Close</string>
    <string name="shoperror">Please add stores in settings!</string>
    <string name="contacterror">Please add contacts in settings!</string>
    <string name="notifsent">Notifications sent</string>
    <string name="permissionfail">Permission wasn\'t granted, notification features won\'t work</string>
    <string name="permissionsuccess">Permission granted</string>
    <string name="itemhistorycleared">Item suggestions cleared</string>
    <string name="cathistorycleared">Category suggestions cleared</string>
    <string name="uploaderror">Couldn\'t upload items</string>
    <string name="downloaderror">Couldn\'t download items</string>
    <string name="editstores">Edit stores</string>
    <string name="editcontacts">Edit contacts</string>
    <string name="clearitems">Clear item suggestions</string>
    <string name="clearcats">Clear category suggestions</string>
    <string name="about">About</string>
    <string name="aboutapp">About this app</string>
    <string name="storesummary">Add, delete or edit stores</string>
    <string name="contactsummary">Add, delete or edit the notified contacts</string>
    <string name="contact_instructions">Select the contacts you\'d like to notify</string>
    <string name="itemremoved">Item removed</string>
    <string name="itempostponed">Item postponed</string>
    <string name="Undo">Undo</string>
    <string name="error_messenger">ERROR: Facebook Messenger not installed</string>
    <string name="error_maps">ERROR: Google Maps not installed</string>
    <string name="setdefaults">Set default items</string>
    <string name="defaultsummary">Set the current shopping list as default</string>
    <string name="itemdefaultset">Default items set</string>
    <string name="cleardefault">Clear default items</string>
    <string name="itemdefaultcleared">Default items cleared</string>
</resources>
