<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/shopsetting_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/store"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/save_shop"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Shop" />

    <Button
        android:id="@+id/save_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_shop"
        android:visibility="gone"
        android:text="@string/done"/>

    <Button
        android:id="@+id/delete_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:text="@string/delete"/>

</android.support.constraint.ConstraintLayout>